force-app/main/default/objects/Insurance_Policy__c/fields/Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Amount__c</fullName>
    <label>Coverage Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>