force-app/main/default/objects/Insurance_Policy__c/fields/Insurance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent__c</fullName>
    <label>Insurance Agent</label>
    <type>Lookup</type>
    <referenceTo>Insurance_Agent__c</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
</CustomField>